# arm_segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
scripts/: train.py  visualize_validation.py  viz_valid.py
src/: predictor.py  train.py  viz.py  viz_valid.py
src/arm_segmentation/: perf.py  predictor.py  visualize_validation.py  viz.py
src/detection/: README.md  coco_utils.py  engine.py  transforms.py
tests/: test_predictor.py
